fixed image wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body, html {
     background-color: #1f1223;
     color: antiquewhite;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     scroll-behavior: smooth;
     font-family: josefin-sans, 'Franklin Gothic Book', Arial;
@@ -52,12 +52,14 @@ a:hover {
     flex-direction: column;
     vertical-align: central;
     align-content: center;
+    align-items: center;
 }
 
 .row {
     flex-direction: row;
     align-content: center;
     text-align: center;
+    align-items: center;
 }
 
 .container {
@@ -67,6 +69,17 @@ a:hover {
 
 .page-content {
     width: 100%;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width:767px) {
+    .flex {
+        display: block;
+    }
 }
 
 /* Upper Navigation Bar */
@@ -137,14 +150,14 @@ a:hover {
 
 .title {
     font-size: 350%;
-    max-width: 100%;
+    max-width: 100vw;
     margin-top: 7%;
     margin-bottom: 3%;
 }
 
 .subheading {
     letter-spacing: 2px;
-    max-width: 100%;
+    max-width: 100vw;
     font-size: 175%;
 }
 
@@ -185,9 +198,6 @@ a:hover {
     transform: scale(1.3) rotate(45deg);
 }
 
-/*@keyframes bounce {
-
-}*/
 
 /* About Page */
 
@@ -198,6 +208,7 @@ a:hover {
     padding-top: 5%;
     vertical-align: central;
     align-content: center;
+    display: flex;
 }
 
 #about a {
@@ -206,27 +217,35 @@ a:hover {
 
 #about-container {
     width: 100%;
+    background-color: #5a5244;
+    display: flex;
 }
 
 #profile-pic {
     max-width: 442.5px;
-    height: auto;
+    max-height: 100%;
+    width: 100%;
     border-radius: 8px;
     text-wrap: normal;
+    object-fit: contain;
+    display: block;
+    float: right;
 }
 
 #picture-container {
-    padding-right: 2%;
+    width: 442.5px;
+    float: right;
     padding-left: 5%;
     padding-bottom: 3%;
+    background-color: #5a5244;
+    overflow: hidden;
 }
 
 #about-text {
-    float: left;
     text-align: left;
     padding-left: 3%;
     width: 50%;
-    align-self: flex-start;
+    align-self: normal;
     padding-bottom: 3%;
 }
 
@@ -236,33 +255,42 @@ a:hover {
 #education {
     width: 100%;
     background-color: #1f1223;
-    min-height: 700px;
+    min-height: 100vh;
     padding-top: 3%;
     padding-bottom: 1%;
+    text-align: center;
+    vertical-align: central;
+    display: flex;
+    align-items: center;
 }
 
 #education-title {
-    width: 100%;
     padding-bottom: 2%;
+    width: 100%;
+    display: flex;
 }
 
 #tum-logo {
+    max-width: 40vw;
     width: auto;
+    height: auto;
 }
 
 #university {
     margin-left: 20px;
     padding-top: 2%;
-    padding-left: 20%;
+    padding-left: 2%;
     text-align: center;
+    width: 40%;
+    float: left;
 }
 
 #curriculum {
-    float: right;
+    width: 40%;
     min-height: 400px; 
     text-align: left; 
     padding-top: 2%;
-    padding-left: 15%;
+    padding-left: 2%;
 }
 
 
@@ -276,6 +304,7 @@ a:hover {
     text-align: center;
     align-items: center;
     width: 100%;
+    display: flex;
 }
 
 #buttons {
@@ -335,6 +364,8 @@ a:hover {
 
 #projects-container {
     align-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .description {
